@@ -2,6 +2,8 @@ Numbers in square brackets ([]) are tracker items on SourceForge with patch
 or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 
 5.4.25 - unreleased
+	Rick Widmer
+	- another try at signedness warnings in maildirquota and vchkpw
 
 
 5.4.24 - Released 29-Sep-2007
